PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Bid__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Average_Closing_Time__c</fullName>
        <description>This field used for Average Closing Time Calculations</description>
        <formula>Phoenix_Sent_to_Customer_Date__c -  Phoenix_Bid_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Closing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Marketing_Head_Approved_Date__c</fullName>
        <label>Bid Marketing Head Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Marketing_Lead_OTC_Approved_Date__c</fullName>
        <label>Bid Marketing Lead OTC Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Marketing_Lead_RX_Approved_Date__c</fullName>
        <label>Bid Marketing Lead RX Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Marketing_Lead_SRX_Approved_Date__c</fullName>
        <label>Bid Marketing Lead SRX Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status (Mark all as)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Line Error- Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracts_Approver__c</fullName>
        <description>This field only used for internal Purpose</description>
        <formula>Phoenix_Customer__r.Phoenix_Contracts_Approver__r.FirstName &amp; &quot; &quot; &amp; Phoenix_Customer__r.Phoenix_Contracts_Approver__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracts Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_New_Contract__c</fullName>
        <label>Create New Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Phoenix_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay_Type__c</fullName>
        <label>Delay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No Delay</fullName>
                </value>
                <value>
                    <fullName>Controllable</fullName>
                </value>
                <value>
                    <fullName>Uncontrollable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Current_User_Bid_Account_Owner__c</fullName>
        <formula>Phoenix_Customer__r.OwnerId  == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Bid Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_Bid_Owner__c</fullName>
        <formula>Phoenix_Bid_Owner__c == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Bid Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_Salesperson_Owner__c</fullName>
        <formula>Phoenix_Salesperson__r.Id  == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Salesperson Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Days__c</fullName>
        <formula>ABS(DATEVALUE(CreatedDate) -  Phoenix_Bid_Submitted_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_to_Contract__c</fullName>
        <label>Load to Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_AdditionalRebateCardinalMajor__c</fullName>
        <label>Additional Rebate % (Cardinal/Major)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Head</fullName>
                </value>
                <value>
                    <fullName>Business Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Marketing Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Sr Director or VP Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Rejected</fullName>
                </value>
                <value>
                    <fullName>Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Vistex Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Vistex Customer Code Update</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_status_at_Hold__c</fullName>
        <label>Approval Status At Hold</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bids3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Category__c</fullName>
        <label>Bid Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Closed_Date__c</fullName>
        <label>Bid Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Contracts_Approved_Date__c</fullName>
        <label>Bid Contracts Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Created_Behalf_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Created on Behalf of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bids2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Deadline_Date__c</fullName>
        <label>Customer Bid Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Finance_Approved_Date__c</fullName>
        <label>Bid Finance Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Marketing_Approved_Date__c</fullName>
        <label>Bid Marketing Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Name__c</fullName>
        <label>Bid Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Proposed_Position__c</fullName>
        <label>Proposed Position</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_SCM_Approved_Date__c</fullName>
        <label>Bid SCM Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Submitted_Date__c</fullName>
        <label>Bid Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Submitter_Comments__c</fullName>
        <label>Bid Submitter Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Type__c</fullName>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracts Only</fullName>
                </value>
                <value>
                    <fullName>Customer Rebate Change</fullName>
                </value>
                <value>
                    <fullName>Initial Order Discount for WAC Customers (No-Contract Price Offering)</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>New Product Launch</fullName>
                </value>
                <value>
                    <fullName>Good Dated OTB</fullName>
                    <label>One Time Buy – Good Dated Shelf Life</label>
                </value>
                <value>
                    <fullName>One Time Buy Good Dated Shelf Life for New Product Launch</fullName>
                    <label>One Time Buy – Good Dated Shelf Life for New Product Launch</label>
                </value>
                <value>
                    <fullName>Short Dated OTB</fullName>
                    <label>One Time Buy – Short Dated Shelf Life</label>
                </value>
                <value>
                    <fullName>OTC New Product</fullName>
                </value>
                <value>
                    <fullName>OTC OTB Good Dated</fullName>
                </value>
                <value>
                    <fullName>OTC OTB Short Dated</fullName>
                </value>
                <value>
                    <fullName>OTC Price Change</fullName>
                </value>
                <value>
                    <fullName>OTC Product Addition</fullName>
                </value>
                <value>
                    <fullName>OTC Rebate Change</fullName>
                </value>
                <value>
                    <fullName>OTC RFP</fullName>
                </value>
                <value>
                    <fullName>OTC Volume Review</fullName>
                </value>
                <value>
                    <fullName>Platform OTB</fullName>
                    <label>Pharmabid</label>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
                <value>
                    <fullName>Product Addition</fullName>
                </value>
                <value>
                    <fullName>Product Discontinuation Process</fullName>
                </value>
                <value>
                    <fullName>Mass Product Removals</fullName>
                    <label>Product Removals</label>
                </value>
                <value>
                    <fullName>RFP Bids</fullName>
                </value>
                <value>
                    <fullName>Sales Out Rebate</fullName>
                </value>
                <value>
                    <fullName>Direct Order Form Pricing Update</fullName>
                    <label>SRx Direct Pricing</label>
                </value>
                <value>
                    <fullName>IPA Floor Pricing Update</fullName>
                    <label>SRx IPA Floor Pricing Update</label>
                </value>
                <value>
                    <fullName>IPA Member Addition</fullName>
                    <label>SRx IPA Member Addition</label>
                </value>
                <value>
                    <fullName>SRx IPA Price Change</fullName>
                </value>
                <value>
                    <fullName>SRx IPA Product Addition</fullName>
                </value>
                <value>
                    <fullName>NEW Individual Pricing Agreement (IPA)</fullName>
                    <label>SRx NEW Individual Pricing Agreement (IPA)</label>
                </value>
                <value>
                    <fullName>RCA/IPA Member GPO or Wholesaler Change</fullName>
                    <label>SRx RCA/IPA Member GPO or Wholesaler Change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Approval_Comments__c</fullName>
        <label>Business Head Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Approval__c</fullName>
        <label>Business Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Wholesaler_Name__c</fullName>
        <formula>TEXT(Phoenix_Customer__r.Phoenix_Preferred_Wholesaler__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contr. Management Fee (Wholesaler) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms_Days__c</fullName>
        <label>Cash Terms #Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Management_Fee__c</fullName>
        <label>Contract Management Fee (Wholesaler) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Workflow_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonafide Fee Setup</fullName>
                </value>
                <value>
                    <fullName>Contract Update (Change/Removal)</fullName>
                </value>
                <value>
                    <fullName>New Agreement(s)</fullName>
                </value>
                <value>
                    <fullName>OTC Price Change or Product Removal</fullName>
                </value>
                <value>
                    <fullName>OTC Product To Contract</fullName>
                </value>
                <value>
                    <fullName>Price Change related to WAC Change</fullName>
                </value>
                <value>
                    <fullName>Price Decrease</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Product Launch</fullName>
                </value>
                <value>
                    <fullName>Product Position Update</fullName>
                </value>
                <value>
                    <fullName>Product Removal</fullName>
                </value>
                <value>
                    <fullName>Rebate Setup</fullName>
                </value>
                <value>
                    <fullName>RFP Award Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contract Extension</fullName>
                </value>
                <value>
                    <fullName>Product Add (email approvals)</fullName>
                </value>
                <value>
                    <fullName>Product Addition due to NDC change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval_Comments__c</fullName>
        <label>Contracts Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval__c</fullName>
        <label>Contracts Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Not_Processed</fullName>
                    <label>Not Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Distribution__c</fullName>
        <label>Controlled Distribution %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance__c</fullName>
        <label>Controlled Substance %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Country_Head_Approval__c</fullName>
        <label>Country Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Country_Head_Comments__c</fullName>
        <label>Country Head Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_CD__c</fullName>
        <label>Current Cash Terms %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Contract__c</fullName>
        <label>Current Contract #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_VIP_Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current VIP Rebate</label>
        <referenceTo>Phoenix_Bid_VIP_Rebate__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Value_Est_VIP__c</fullName>
        <label>Current Tracking VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Custom_type__c</fullName>
        <label>Custom type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom type 1</fullName>
                </value>
                <value>
                    <fullName>Custom type 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approval_Comments__c</fullName>
        <label>Customer Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Approval__c</fullName>
        <label>Customer Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline_Date_Time__c</fullName>
        <label>Customer Bid Deadline Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline_Date__c</fullName>
        <label>Customer Bid Deadline Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline_Month__c</fullName>
        <label>Customer Bid Deadline Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline_Time__c</fullName>
        <defaultValue>&quot;6:00 PM&quot;</defaultValue>
        <label>Customer Bid Deadline Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:30 AM</fullName>
                </value>
                <value>
                    <fullName>2:45 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:15 AM</fullName>
                </value>
                <value>
                    <fullName>3:30 AM</fullName>
                </value>
                <value>
                    <fullName>3:45 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:15 AM</fullName>
                </value>
                <value>
                    <fullName>4:30 AM</fullName>
                </value>
                <value>
                    <fullName>4:45 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:15 AM</fullName>
                </value>
                <value>
                    <fullName>5:30 AM</fullName>
                </value>
                <value>
                    <fullName>5:45 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:15 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>6:45 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline_Time_zone__c</fullName>
        <defaultValue>&quot;EST&quot;</defaultValue>
        <label>Customer Bid Deadline Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Timezone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bid_Deadline_Year__c</fullName>
        <label>Customer Bid Deadline Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>